# gearspotting

./: .dockerignore  .gitignore  .travis.yml  AGENTS.md  Dockerfile  Jenkinsfile  Makefile  README.md  config.mk  django.mk  docker-run.sh  entry-point.sh  entry_point.py  fabfile.py  flake.nix  fly.toml  js.mk  manage.py  pyproject.toml  requirements.in  requirements.txt  settings_production.py  settings_shared.py  tox.ini  urls.py
.github/: main.workflow
.github/workflows/: codeql-analysis.yml  deploy.yml  fly.yml  push.yml
apache/: django.wsgi  prod.conf  sample.conf
deploy/: deployment.yaml
gear/: feeds.py  models.py  urls.py  views.py
gear/migrations/: 0001_initial.py  0002_auto__add_gearphoto.py  0003_split_photos.py
gearspotting/: settings_docker.py  settings_production.py  settings_shared.py  urls.py  wsgi.py
gearspotting/blog/: feeds.py  models.py  tests.py  urls.py  views.py
gearspotting/gear/: feeds.py  models.py  tests.py  urls.py  views.py
gearspotting/link/: models.py
gearspotting/main/: test_perf.py  tests.py  views.py
gearspotting/manufacturer/: models.py  tests.py  urls.py  views.py
gearspotting/musician/: feeds.py  models.py  tests.py  urls.py  views.py
gearspotting/musiciangear/: models.py  tests.py  urls.py  views.py
gearspotting/photo/: models.py  tests.py  urls.py  views.py
gearspotting/profile/: models.py
gearspotting/tag/: models.py
gearspotting/templates/: 404.html  500.html  base.html  homepage.html  index.html
gearspotting/utils/: models.py  views.py
link/: models.py
link/migrations/: 0001_initial.py
main/: views.py
manufacturer/: models.py  urls.py  views.py
manufacturer/migrations/: 0001_initial.py
media/css/: main.css
musician/: feeds.py  models.py  urls.py  views.py
musician/migrations/: 0001_initial.py  0002_auto__add_musicianphoto.py  0003_split_photos.py
musiciangear/: models.py  urls.py  views.py
musiciangear/migrations/: 0001_initial.py  0002_auto__add_musiciangearphoto.py  0003_split_photos.py
photo/: models.py  urls.py  views.py
photo/migrations/: 0001_initial.py  0002_auto__del_field_photo_object_id__del_field_photo_content_type.py
profile/: models.py
requirements/: apps.txt  libs.txt
static/css/: main.css
static/js/: tablesort.js
templates/: base.html  homepage.html  index.html
templates/gear/: add_photo.html  gear_detail.html  gear_form.html  gear_list.html  gear_tag_list.html  index.html  tags.html
templates/main/: tags.html
templates/manufacturer/: #index.html#  .#index.html  add_gear.html  manufacturer_detail.html  manufacturer_form.html  manufacturer_list.html
templates/musician/: add_link.html  index.html  musician_detail.html  musician_form.html  musician_tag_list.html
templates/musiciangear/: add_link.html  musiciangear_detail.html  (+2 more)
(+92 files in other folders)
