[project]
name = "gearspotting"
version = "0.1.0"
description = "gear"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools",
    "Django==6.0.1",
    "Markdown==3.10.1",
    "psycopg==3.3.2",
    "gunicorn==24.1.1",
    "django-bootstrap-form==3.4",
    "django-smoketest==1.2.1",
    "sentry-sdk==2.50.0",
    "whitenoise==6.11.0",
    "requests==2.32.5",
    "django-debug-toolbar==6.2.0",
    "types-markdown>=3.10.0.20251106",
]
[dependency-groups]
dev = [
"mypy==1.11.1",
"typing-extensions==4.15.0",
"mypy-extensions==1.1.0",
"django-stubs[compatible-mypy]==5.0.4",
"ruff==0.14.13",
"types-requests==2.32.4.20260107",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    ]
ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
# disallow_subclassing_any = true
disallow_untyped_decorators = true
# disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
# disallow_untyped_defs = true

no_implicit_reexport = true
warn_return_any = true
exclude = [
'tests',
'migrations',
]

[tool.django-stubs]
django_settings_module = "gearspotting.settings"

[tool.ruff]
exclude = ["migrations"]
line-length = 79

[tool.ruff.lint.mccabe]
max-complexity = 5
